fix need to refresh, add options for rhyming api, change loading spinner, improve responsiveness on mobile

--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -55,6 +55,19 @@ p
   margin: 1.5em 0
   .btn
     margin-right: 1.5em
+    @media only screen and (max-width: $breakpoint)
+      margin-bottom: 1em
+  @media only screen and (max-width: $breakpoint)
+    flex-direction: column
+
+
+.rhyming-options
+  display: flex
+  align-items: center
+  label
+    margin-right: 1em
+  @media only screen and (max-width: $breakpoint)
+    flex-direction: column
 
 #text
   width: 100%
@@ -69,6 +82,7 @@ p
   width: 100%
   margin: 1em 0
   padding: 0.5em 1em 0 1em
+  box-sizing: border-box
   min-height: 200px
   background-color: #FFFFFF
   border: 1px solid lightgrey
@@ -78,60 +92,46 @@ p
 
 // loading spinner
 .spinner
-  width: 40px
-  height: 40px
-  position: relative
+  margin-right: 1.5em
   text-align: center
-  -webkit-animation: sk-rotate 2.0s infinite linear
-  animation: sk-rotate 2.0s infinite linear
+  font-size: 0.75em
 
-.dot1
-  width: 60%
-  height: 60%
-  display: inline-block
-  position: absolute
-  top: 0
-  background-color: #333
-  border-radius: 100%
-  -webkit-animation: sk-bounce 2.0s infinite ease-in-out
-  animation: sk-bounce 2.0s infinite ease-in-out
+  > div
+    background-color: #333
+    height: 100%
+    width: 6px
+    display: inline-block
+    -webkit-animation: sk-stretchdelay 1.2s infinite ease-in-out
+    animation: sk-stretchdelay 1.2s infinite ease-in-out
 
-.dot2
-  width: 60%
-  height: 60%
-  display: inline-block
-  position: absolute
-  top: 0
-  background-color: #333
-  border-radius: 100%
-  -webkit-animation: sk-bounce 2.0s infinite ease-in-out
-  animation: sk-bounce 2.0s infinite ease-in-out
-  top: auto
-  bottom: 0
-  -webkit-animation-delay: -1.0s
-  animation-delay: -1.0s
+  .rect2
+    -webkit-animation-delay: -1.1s
+    animation-delay: -1.1s
 
-@-webkit-keyframes sk-rotate
-  100%
-    -webkit-transform: rotate(360deg)
+  .rect3
+    -webkit-animation-delay: -1.0s
+    animation-delay: -1.0s
 
-@keyframes sk-rotate
-  100%
-    transform: rotate(360deg)
-    -webkit-transform: rotate(360deg)
+  .rect4
+    -webkit-animation-delay: -0.9s
+    animation-delay: -0.9s
 
-@-webkit-keyframes sk-bounce
-  0%, 100%
-    -webkit-transform: scale(0)
+  .rect5
+    -webkit-animation-delay: -0.8s
+    animation-delay: -0.8s
 
-  50%
-    -webkit-transform: scale(1)
+@-webkit-keyframes sk-stretchdelay
+  0%, 40%, 100%
+    -webkit-transform: scaleY(0.4)
 
-@keyframes sk-bounce
-  0%, 100%
-    transform: scale(0)
-    -webkit-transform: scale(0)
+  20%
+    -webkit-transform: scaleY(1)
 
-  50%
-    transform: scale(1)
-    -webkit-transform: scale(1)
+@keyframes sk-stretchdelay
+  0%, 40%, 100%
+    transform: scaleY(0.4)
+    -webkit-transform: scaleY(0.4)
+
+  20%
+    transform: scaleY(1)
+    -webkit-transform: scaleY(1)
